# elaws-openapi-proxy

./: LICENSE  README.md
cdk/: cdk.json  package.json
cdk/lib/: _cdk-stack.ts
examples/: README.md
examples/langchain-js/: .gitignore  README.md  next.config.js  package.json  tsconfig.json  webpack.config.js
examples/langchain-js/app/: createAgentExecutor.ts  layout.tsx  page.tsx
examples/langchain-js/dist-prod/: index.html
examples/langchain-js/src/: index.html  main.ts
examples/langchain-py/: .gitignore  README.md  langchain-py-2.ipynb  langchain-py.ipynb  pyproject.toml
lambda/: Dockerfile  package.json
lambda/src/: main.ts
lambda/webpack-configs/: main.ts
server/: .eslintrc.json  .gitignore  package.json  tsconfig.json  tsoa.json
server/src/: app.ts  common.ts  server.ts
server/src/articles/: articles.ts  articlesController.ts  articlesService.ts
server/src/lawData/: lawData.ts  lawDataController.ts  lawDataService.ts
server/src/lawLists/: lawLists.ts  lawListsController.ts  lawListsService.ts
server/src/updateLawLists/: updateLawLists.ts  updateLawListsController.ts  updateLawListsService.ts
