[tool.poetry]
name = "elaws-openapi-proxy-example-langchain-py"
version = "0.1.0"
description = ""
authors = ["yamachi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
langchain = "^0.0.240"
ipykernel = "^6.24.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
